client/src/index.scss
/* ... */
//Semantic UI CSS Owerwrite Start Here //

.ui.fluid.dropdown {
  min-height: 30px !important;
  max-height: 30px !important;
  padding: 0;
}
.mandatory {
  .ui.selection.dropdown {
    border: 1px solid rgb(225, 173, 70);
  }
}

.ui.search.dropdown .menu {
  border-color: lighten($color-black, 80%) !important;
  max-height: 17vh;
  width: max-content;
  max-width: calc(100% + 100px);
}
.ui.search.dropdown > .text {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: inherit;
  max-width: 85%;
  padding: 0.5rem;
}
.ui.search.selection.dropdown > input.search {
  padding: 0.64em 0.5em;
}
.ui.selection.dropdown > .delete.icon,
.ui.selection.dropdown > .dropdown.icon,
.ui.selection.dropdown > .search.icon {
  line-height: 1.21428571em;
  top: 0;
  right: 0;
  padding: 0.6em;
  color: lighten($color-black, 40%);
}
.ui.selection.dropdown .menu > .item {
  padding: 0.6em !important;
}
.ui.input > input {
  font-weight: 700;
  font-size: 0.9em;
  min-height: 30px !important;
  max-height: 30px !important;
  padding: 0.3em 0.5em;
}

//Semantic UI CSS Owerwrite End Here //

//App Arabic Version Starts  Here //
.arabic_component {
  direction: rtl;
  text-align: right;
  input {
    &::placeholder {
      text-align: right;
    }
  }
  .text-arabic {
    font-size: 1.1rem;
  }
  .spotlightSearchIconBox {
    border-right: 1px solid #ced4d8;
    border-left: 0 !important;
  }
  .print-area div {
    float: left;
    border-right: 1px solid #adaaaa;
    border-left: 0;
  }
  .hdg_bredcrump {
    background: url("./assets/images/breadcrump_border_Ar.webp") no-repeat top
      left #fff !important;
  }

  .hptl-phase1-add-patient-form .primary-details,
  .htpl-phase1-primary-insurance-form .primary-details,
  .htpl-phase1-seconary-insurance-form .primary-details,
  .hptl-phase1-add-consultation-form .primary-details {
    border-left: 1px dashed #d3d3d3;
    border-right: 0;
  }
  .hptl-phase1-footer{ button {
    font-size: 1.2rem;
    float: left;
  }.btn:disabled{
    cursor: not-allowed!important;
    opacity: 0.4;
  }
}
  .toggle-section .nav {
    padding: 0;
    right: auto;
  }
  .ui.search.dropdown > .text {
    text-align: right;
    float: right;
  }
  .ui.selection.dropdown > .delete.icon,
  .ui.selection.dropdown > .dropdown.icon,
  .ui.selection.dropdown > .search.icon {
    text-align: left;
    left: 0;
  }
  .ui.dropdown .menu {
    right: 0;
  }
  .ui.dropdown .menu > .item {
    text-align: right;
  }
  .insuranceRadio {
    padding-right: 15px !important;
    padding-left: 0 !important;
    .customRadio .inline + .inline {
      margin-right: 10px !important;
      margin-left: 0 !important;
    }
  }
  .maternityRadio {
    padding-right: 15px !important;
    padding-left: 0 !important;
    .customRadio .inline + .inline {
      margin-right: 10px !important;
      margin-left: 0 !important;
    }
  }
  .bk-bn {

    left: 100px;
  }
}
.ar_comp {
  .algaeh-modal {
    direction: rtl;
    text-align: right;
    input {
      &::placeholder {
        text-align: right;
      }
    }
    .text-arabic {
      font-size: 1.1rem;
    }
    .popupHeader {
      h4 {
        label {
          font-size: 1.5rem;
        }
      }
      button {
        float: left;
      }
    }
    .popupFooter {
      .btn {
        float: left;
        margin-left: 0;
        margin-right: 10px;
      }
    }
  }
}
//App Arabic Version End Here //

